syntax = "proto3";
option go_package = '.;proto';


service User {
  rpc getUserList(PageInfo) returns (UserListResponse); //用户列表
  rpc getUserInfo(IdRequest) returns (UserInfoResponse); //通过id查找用户
  rpc getUserMobile(MobileRequest) returns (UserInfoResponse); //通过手机查找用户
  rpc createUser(CreateUserReq) returns (UserInfoResponse); //创建用户
  rpc updateUser(UpdateUserReq) returns (Response);
  rpc checkPassword(checkPasswordReq) returns (CheckPasswordResponse);
}

// UMS 角色服务
service Ums {
  rpc GetRole(RoleRequest) returns (RoleItem);
  rpc ListRole(RoleListRequest) returns (RoleListResponse);
  rpc CreateRole(RoleItem) returns (Response);
  rpc UpdateRole(RoleItem) returns (Response);
  rpc DeleteRole(RoleRequest) returns (Response);
}

message  CheckPasswordResponse {
  bool is_valid = 1;
}

message checkPasswordReq {
  string password = 1;
  string encryptedPassword = 2;
}

message Response {
  int32 code = 1;
  string msg = 2;
}

message UpdateUserReq {
  int32 id = 1;
  string password = 2;
  string mobile = 3;
  string nickName = 4;
  uint64 birthDay = 5;
  string gender = 6;
  int32 role = 7;
  int32 userId = 8;
}

message CreateUserReq {
  string nickName = 1;
  string password = 2;
  string mobile = 3;
  int32 role = 4;
}

message MobileRequest {
  string mobile = 1;
}

message  IdRequest {
  int32 id = 1;
}

message PageInfo {
  uint32 page = 1;
  uint32 limit = 2;

}

message UserInfoResponse {
  int32 id = 1;
  string password = 2;
  string mobile = 3;
  string nickName = 4;
  uint64 birthDay = 5;
  string gender = 6;
  int32 role = 7;

}

message UserListResponse{
  int32 total = 1;
  repeated UserInfoResponse data = 2;

}

// -------------- UMS --------------
message RoleItem {
  int32 id = 1;
  string role_name = 2;
  repeated int32 menu_ids = 3;
}

message RoleRequest {
  int32 id = 1;
}

message RoleListRequest {
  int32 page = 1;
  int32 limit = 2;
  string key = 3;
}

message RoleListResponse {
  repeated RoleItem list = 1;
  int32 count = 2;
}
